--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         look-at="[gps-camera]"
         scale="50 50 50"
         gps-entity-place="latitude: 34.42468; longitude: 135.44282;"></a-text>
-        <a-camera gps-camera rotation-reader></a-camera>
+        <a-camera gps-camera="maxDistance: 100" rotation-reader></a-camera>
         </a-scene>
     </body>
 </html>
