--- a/index.html
+++ b/index.html
@@ -5,18 +5,15 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE-edge" />
     <title>Location-based AR.js demo</title>
-    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
-    <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
+    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+    <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar-threex-location-only.js'></script>
+    <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js'></script>
 </head>
 
 <body style="margin: 0; overflow: hidden;">
-    <a-scene vr-mode-ui="enabled: false" embedded arjs="sourceType: webcam; debugUIEnabled: false;">
-        <a-text value="This content will always face you." look-at="[gps-camera]" scale="100 100 100"
-            gps-entity-place="latitude: 34.712992; longitude: 135.741166;"></a-text>
-        <a-text value="This is KIT." look-at="[gps-camera]" scale="100 100 100"
-            gps-entity-place="latitude: 35.049176; longitude: 135.780167;"></a-text>
-        <a-camera gps-camera rotation-reader></a-camera>
+    <a-scene vr-mode-ui="enabled: false" arjs="sourceType: webcam; videoTexture: true; debugUIEnabled: false" renderer="antialias: true; alpha: true">
+        <a-camera gps-new-camera></a-camera>
+        <a-box material="color: yellow" geometry="primitive: box" gps-new-entity-place="latitude: 34.712992; longitude: 135.741165" scale="10 10 10"></a-box>
     </a-scene>
 </body>
 
