--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body style="margin: 0; overflow: hidden;">
     <a-scene vr-mode-ui="enabled: false" arjs="sourceType: webcam; videoTexture: true; debugUIEnabled: false" renderer="antialias: true; alpha: true">
         <a-camera gps-new-camera></a-camera>
-        <a-box material="color: yellow" geometry="primitive: box" gps-new-entity-place="latitude: 34.712992; longitude: 135.741165" scale="10 10 10"></a-box>
+        <a-box material="color: yellow" geometry="primitive: box" gps-new-entity-place="latitude: 34.7137290; longitude: 135.7430289" scale="10 10 10"></a-box>
     </a-scene>
 </body>
 
