--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <a-scene vr-mode-ui="enabled: false" arjs="sourceType: webcam; videoTexture: true; debugUIEnabled: false" renderer="antialias: true; alpha: true">
         <a-camera gps-new-camera></a-camera>
         <a-box material="color: yellow" geometry="primitive: box" gps-new-entity-place="latitude: 34.7137290; longitude: 135.7430289" scale="5 5 5"></a-box>
+        <a-text value="House" look-at="[gps-camera]" scale="5 5 5" gps-new-entity-place="latitude: 34.7137290; longitude: 135.7430289"></a-text>
     </a-scene>
 </body>
 
