--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body style="margin: 0; overflow: hidden;">
     <a-scene vr-mode-ui="enabled: false" arjs="sourceType: webcam; videoTexture: true; debugUIEnabled: false" renderer="antialias: true; alpha: true">
         <a-camera gps-new-camera></a-camera>
-        <a-box material="color: yellow" geometry="primitive: box" gps-new-entity-place="latitude: 34.7137290; longitude: 135.7430289" scale="5 5 5"></a-box>
-        <a-text value="House" look-at="[gps-camera]" scale="5 5 5" gps-new-entity-place="latitude: 34.7137290; longitude: 135.7430289"></a-text>
+        <!-- <a-box material="color: yellow" geometry="primitive: box" gps-new-entity-place="latitude: 34.712991; longitude: 135.741175" scale="5 5 5"></a-box> -->
+        <a-text value="家の前の道路" font="exfont-msdf.json" font-image="exfont-msdf.png" nagate="false" scale="2 2 1" position="0 1 -4" color="red"></a-text>
     </a-scene>
 </body>
 
