--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body style="margin: 0; overflow: hidden;">
     <a-scene vr-mode-ui="enabled: false" arjs="sourceType: webcam; videoTexture: true; debugUIEnabled: false" renderer="antialias: true; alpha: true">
         <a-camera gps-camera rotation-reader alert="true"></a-camera>
-        <a-box material="color: yellow" geometry="primitive: box" gps-new-entity-place="latitude: 34.71285; longitude: 135.74095" scale="2 2 2"></a-box>
+        <a-box material="color: yellow" geometry="primitive: box" gps-entity-place="latitude: 34.71285; longitude: 135.74095" scale="2 2 2"></a-box>
         <a-text value="こんにちは" font="custom-msdf.json" font-image="custom.png" negate="false" scale="5 5 5" gps-entity-place="latitude: 34.71285; longitude: 135.74095"></a-text>
     </a-scene>
 </body>
