--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js'></script>
 </head>
 
-<body style="margin: 0; overflow: hidden;">
+<body style="margin: 10px; overflow: hidden;">
     <a-scene vr-mode-ui="enabled: false" arjs="sourceType: webcam; videoTexture: true; debugUIEnabled: false" renderer="antialias: true; alpha: true">
         <a-camera gps-new-camera></a-camera>
         <a-entity material="color: red" geometry="primitive: box" gps-new-entity-place="latitude: 34.712817; longitude: 135.740957" scale="10 10 10"></a-entity>
