--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body style="margin: 0; overflow: hidden;">
     <a-scene vr-mode-ui="enabled: false" arjs="sourceType: webcam; videoTexture: true; debugUIEnabled: false" renderer="antialias: true; alpha: true">
         <a-camera gps-new-camera></a-camera>
-        <a-entity material="color: red" geometry="primitive: box" gps-new-entity-place="latitude: 34.712817; longitude: 135.740957" scale="20 20 20"></a-entity>
+        <!-- <a-entity material="color: red" geometry="primitive: box" gps-new-entity-place="latitude: 34.712817; longitude: 135.740957" scale="20 20 20"></a-entity> -->
         <a-text value="こんにちは" font="custom-msdf.json" font-image="custom.png" negate="false" scale="2 2 1" color="green" gps-new-entity-place="latitude: 34.712817; longitude: 135.740957"></a-text>
     </a-scene>
 </body>
