--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <a-scene vr-mode-ui="enabled: false" arjs="sourceType: webcam; videoTexture: true; debugUIEnabled: false" renderer="antialias: true; alpha: true">
         <a-camera gps-camera></a-camera>
         <!-- <a-entity material="color: red" geometry="primitive: box" gps-new-entity-place="latitude: 34.712817; longitude: 135.740957" scale="20 20 20"></a-entity> -->
-        <a-text value="こんにちは" font="custom-msdf.json" font-image="custom.png" negate="false" scale="5 5 5" color="green" gps-new-entity-place="latitude: 34.712817; longitude: 135.740957"></a-text>
+        <a-text value="こんにちは" font="custom-msdf.json" font-image="custom.png" negate="false" scale="5 5 5" color="green" gps-entity-place="latitude: 34.712817; longitude: 135.740957"></a-text>
     </a-scene>
 </body>
 
