--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@
     <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
     <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar-threex-location-only.js'></script>
     <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js'></script>
-    <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
 </head>
 
 <body style="margin: 0; overflow: hidden;">
     <a-scene vr-mode-ui="enabled: false" arjs="sourceType: webcam; videoTexture: true; debugUIEnabled: false" renderer="antialias: true; alpha: true">
-        <a-camera gps-camera></a-camera>
-        <!-- <a-entity material="color: red" geometry="primitive: box" gps-new-entity-place="latitude: 34.712817; longitude: 135.740957" scale="20 20 20"></a-entity> -->
-        <a-text value="This is AR.js." loog-at="[gps-camera]" scale="50 50 50" gps-entity-place="latitude: 34.712817; longitude: 135.740957"></a-text>
+        <a-camera gps-new-camera></a-camera>
+        <a-entity material="color: red" geometry="primitive: sphere" gps-new-entity-place="latitude: 34.712817; longitude: 135.740957" scale="20 20 20"></a-entity>
     </a-scene>
 </body>
 
