--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body style="margin: 0; overflow: hidden;">
     <a-scene vr-mode-ui="enabled: false" arjs="sourceType: webcam; videoTexture: true; debugUIEnabled: false" renderer="antialias: true; alpha: true">
         <a-camera gps-new-camera></a-camera>
-        <a-entity material="color: red" geometry="primitive: box" gps-new-entity-place="latitude: 34.712817; longitude: 135.740957" scale="20 20 20"></a-entity>
-        <a-entity material="color: yellow" geometry="primitive: box" gps-new-entity-place="latitude: 34.71288; longitude: 135.74101" scale="20 20 20"></a-entity>
+        <a-entity material="color: red" geometry="primitive: box" gps-new-entity-place="latitude: 34.712817; longitude: 135.740957" scale="5 5 5"></a-entity>
+        <a-entity material="color: blue" geometry="primitive: text" value="Hello." look-at="[gps-new-camera]" gps-new-entity-place="latitude: 34.71288; longitude: 135.74101" scale="5 5 5"></a-entity>
     </a-scene>
 </body>
 
