--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <a-scene vr-mode-ui="enabled: false" arjs="sourceType: webcam; videoTexture: true; debugUIEnabled: false" renderer="antialias: true; alpha: true">
         <a-camera gps-new-camera></a-camera>
         <a-entity material="color: red" geometry="primitive: box" gps-new-entity-place="latitude: 34.712817; longitude: 135.740957" scale="5 5 5"></a-entity>
-        <a-entity text="text: Hello World;"></a-entity>
+        <a-entity text="value: Hello World"></a-entity>
     </a-scene>
 </body>
 
