--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body style="margin: 0; overflow: hidden;">
     <a-scene vr-mode-ui="enabled: false" embedded arjs="sourceType: webcam; videoTexture: true; debugUIEnabled: false" renderer="antialias: true; alpha: true">
         <a-assets>
-            <!-- <a-asset-item id="model" src="ball.glb"></a-asset-item> -->
+            <a-asset-item id="model" src="ball.glb"></a-asset-item>
             <a-asset-item id="human" src="human.obj"></a-asset-item>
         </a-assets>
         <a-obj-model src="#human" gps-entity-place="latitude: 34.712621; longitude: 135.740621"></a-obj-model>
