--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body style="margin: 0; overflow: hidden;">
-    <a-scene vr-mode-ui="enabled: false" embedded arjs="sourceType: webcam; videoTexture: true; debugUIEnabled: false" renderer="antialias: true; alpha: true">
+    <a-scene vr-mode-ui="enabled: false" arjs="sourceType: webcam; videoTexture: true; debugUIEnabled: false" renderer="antialias: true; alpha: true">
         <a-assets>
             <a-asset-item id="model" src="ball.glb"></a-asset-item>
             <a-asset-item id="human" src="human.obj"></a-asset-item>
