--- a/index.html
+++ b/index.html
@@ -11,13 +11,11 @@
 </head>
 
 <body style="margin: 0; overflow: hidden;">
-    <a-scene vr-mode-ui="enabled: false" arjs="sourceType: webcam; videoTexture: true; debugUIEnabled: false" renderer="antialias: true; alpha: true">
+    <a-scene vr-mode-ui="enabled: false" arjs="sourceType: webcam; videoTexture: true; debugUIEnabled: false;">
         <a-assets>
-            <a-asset-item id="model" src="ball.glb"></a-asset-item>
-            <a-asset-item id="human" src="human.obj"></a-asset-item>
+            <a-asset-item id="human" src="human.glb"></a-asset-item>
         </a-assets>
-        <a-obj-model src="#human" gps-entity-place="latitude: 34.712621; longitude: 135.740621"></a-obj-model>
-        <a-entity material="color: red" geometry="primitive: box" gps-entity-place="latitude: 34.712817; longitude: 135.740957" scale="5 5 5"></a-entity>
+        <a-obj-model gltf-model="#human" gps-entity-place="latitude: 34.712817; longitude: 135.740957"></a-obj-model>
         <a-camera gps-camera rotation-reader></a-camera>
     </a-scene>
 </body>
