--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE-edge" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Location-based AR.js demo</title>
     <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
     <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar-threex-location-only.js'></script>
@@ -17,6 +17,11 @@
         </a-assets>
         <a-obj-model gltf-model="#human" gps-entity-place="latitude: 34.712817; longitude: 135.740957"></a-obj-model>
         <a-camera gps-camera rotation-reader></a-camera>
+
+        <!-- Optional: Add a marker to visualize the location -->
+        <a-marker gps-entity-place="latitude: 34.712817; longitude: 135.740957">
+            <a-sphere radius="0.1" color="red"></a-sphere>
+        </a-marker>
     </a-scene>
 </body>
 
