--- a/index.html
+++ b/index.html
@@ -1,27 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Location-based AR.js demo</title>
-    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
-    <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar-threex-location-only.js'></script>
-    <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js'></script>
+    <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+    <script type="text/javascript" src="scripts/ar-threex-location-only.js"></script>
+    <script type="text/javascript" src="scripts/aframe-ar.js"></script>
 </head>
 
 <body style="margin: 0; overflow: hidden;">
-    <a-scene vr-mode-ui="enabled: false" arjs="sourceType: webcam; videoTexture: true; debugUIEnabled: false;">
-        <a-assets>
-            <a-asset-item id="human" src="human.glb"></a-asset-item>
-        </a-assets>
-        <a-obj-model gltf-model="#human" gps-entity-place="latitude: 34.71285; longitude: 135.74094"></a-obj-model>
-
-        <!-- Optional: Add a marker to visualize the location -->
-        <a-marker gps-entity-place="latitude: 34.712817; longitude: 135.740957">
-            <a-sphere radius="0.1" color="red"></a-sphere>
-        </a-marker>
+    <a-scene vr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false;">
         <a-camera gps-camera rotation-reader></a-camera>
+        <a-assets>
+            <a-asset-item id="human"
+                src="human.glb"></a-asset-item>
+        </a-assets>
+        <a-entity gltf-model="#human" scale=".05 .05 .05" position="0 1 -1" modify-materials
+         gps-entity-place="latitude: 34.71283; longitude: 135.74095"></a-entity>
     </a-scene>
 </body>
 
