--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 src="human.glb"></a-asset-item>
         </a-assets>
         <script>console.log("Assets Ready.");</script>
-        <a-entity gltf-model="#human" position="0 1 -1" modify-materials
+        <a-entity gltf-model="#human" modify-materials
          gps-entity-place="latitude: 34.71283; longitude: 135.74095"></a-entity>
          <script>console.log("All Ready.");</script>
     </a-scene>
