--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         </a-assets>
         <a-entity gltf-model="#human" modify-materials
          gps-entity-place="latitude: 34.712957; longitude: 135.740520"></a-entity>
+        <a-entity gltf-model="#human" modify-materials
+         gps-entity-place="latitude: 34.712591; longitude: 135.740675"></a-entity>
     </a-scene>
 </body>
 
