--- a/index.html
+++ b/index.html
@@ -6,18 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Location-based AR.js demo</title>
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
-<!--     <script type="text/javascript" src="scripts/ar-threex-location-only.js"></script>
-    <script type="text/javascript" src="scripts/aframe-ar.js"></script> -->
     <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar-threex-location-only.js'></script>
     <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js'></script>
 </head>
 
 <body style="margin: 0; overflow: hidden;">
-    <a-scene vr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false;">
+    <a-scene xr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false;">
         <a-camera gps-camera rotation-reader></a-camera>
         <a-assets>
             <a-asset-item id="human"
-                src="human.glb"></a-asset-item>
+                src="static/assets/human.glb"></a-asset-item>
         </a-assets>
         <a-entity gltf-model="#human" modify-materials scale="0.7 0.7 0.7"
          gps-entity-place="latitude: 34.712957; longitude: 135.740520"></a-entity>
