--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
         <a-assets>
             <a-asset-item id="human"
                 src="static/assets/human.glb"></a-asset-item>
+            <a-asset-item id="aqua1"
+                src="static/assets/aqua1.glb"></a-asset-item>
         </a-assets>
         <a-entity gltf-model="#human" modify-materials scale="0.7 0.7 0.7"
          gps-entity-place="latitude: 34.712957; longitude: 135.740520"></a-entity>
-        <a-entity gltf-model="#human" modify-materials position="0 0 0"
+        <a-entity gltf-model="#aqua1" modify-materials
          gps-entity-place="latitude: 34.712591; longitude: 135.740675"></a-entity>
-        <a-entity gltf-model="#human" modify-materials
+        <a-entity gltf-model="#aqua1" modify-materials
          gps-entity-place="latitude: 35.049773; longitude: 135.782621"></a-entity>
     </a-scene>
 </body>
