--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
     <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar-threex-location-only.js'></script>
     <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js'></script>
+    <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
 </head>
 
 <body style="margin: 0; overflow: hidden;">
@@ -21,9 +22,9 @@
         </a-assets>
         <a-entity gltf-model="#human" modify-materials scale="0.7 0.7 0.7"
          gps-entity-place="latitude: 34.712957; longitude: 135.740520"></a-entity>
-        <a-entity gltf-model="#aqua1" modify-materials
+        <a-entity gltf-model="#aqua1" modify-materials look-at="[gps-camera]"
          gps-entity-place="latitude: 34.712591; longitude: 135.740675"></a-entity>
-        <a-entity gltf-model="#aqua1" modify-materials
+        <a-entity gltf-model="#aqua1" modify-materials look-at="[gps-camera]"
          gps-entity-place="latitude: 35.049773; longitude: 135.782621"></a-entity>
     </a-scene>
 </body>
