--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body style="margin: 0; overflow: hidden;">
-    <a-scene xr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false;">
+    <a-scene xr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false;" renderer="logarithmicDepthBuffer: true;">
         <a-camera gps-camera rotation-reader></a-camera>
         <a-assets>
             <a-asset-item id="human"
