--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         </a-assets>
         <a-entity gltf-model="#human" modify-materials scale="0.7 0.7 0.7"
          gps-new-entity-place="latitude: 34.712957; longitude: 135.740520"></a-entity>
-        <a-entity gltf-model="#aqua1" modify-materials look-at="[gps-camera]" scale="0.5 0.5 0.5"
+        <a-entity gltf-model="#aqua1" modify-materials look-at="[gps-new-camera]" scale="0.5 0.5 0.5"
          gps-new-entity-place="latitude: 34.712591; longitude: 135.740675"></a-entity>
-        <a-entity gltf-model="#aqua1" modify-materials look-at="[gps-camera]" scale="0.5 0.5 0.5"
+        <a-entity gltf-model="#aqua1" modify-materials look-at="[gps-new-camera]" scale="0.5 0.5 0.5"
          gps-new-entity-place="latitude: 35.049773; longitude: 135.782621"></a-entity>
     </a-scene>
 </body>
