--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a-asset-item id="aqua1"
                 src="static/assets/aqua1.glb"></a-asset-item>
         </a-assets>
-        <a-entity gltf-model="#human" modify-materials scale="0.7 0.7 0.7"
+        <a-entity gltf-model="#human" modify-materials scale="0.7 0.7 0.7" position="0 -1 0"
          gps-new-entity-place="latitude: 34.712957; longitude: 135.740520"></a-entity>
         <a-entity gltf-model="#aqua1" modify-materials look-at="[gps-new-camera]" scale="0.5 0.5 0.5"
          gps-new-entity-place="latitude: 34.712591; longitude: 135.740675"></a-entity>
