--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body style="margin: 0; overflow: hidden;">
     <a-scene xr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false;" renderer="logarithmicDepthBuffer: true;">
-        <a-camera gps-new-camera rotation-reader></a-camera>
+        <a-camera gps-new-camera maxDistance="5"></a-camera>
         <a-assets>
             <a-asset-item id="human"
                 src="static/assets/human.glb"></a-asset-item>
@@ -22,7 +22,7 @@
         </a-assets>
         <a-entity gltf-model="#human" modify-materials scale="0.7 0.7 0.7" position="0 -10 0"
          gps-new-entity-place="latitude: 34.712957; longitude: 135.740520"></a-entity>
-        <a-entity gltf-model="#aqua1" modify-materials look-at="[gps-new-camera]" scale="0.1 0.1 0.1" position="0 -10 0" rotation="90 90 -90"
+        <a-entity gltf-model="#aqua1" modify-materials look-at="[gps-new-camera]" scale="0.1 0.1 0.1" position="0 -10 0"
          gps-new-entity-place="latitude: 34.71287; longitude: 135.74097"></a-entity>
         <a-entity gltf-model="#aqua1" modify-materials look-at="[gps-new-camera]" scale="0.5 0.5 0.5"
          gps-new-entity-place="latitude: 35.049773; longitude: 135.782621"></a-entity>
